# xbom-generator

./: .gitignore  README.md  deploy.sh  pyproject.toml
.claude/evals/: xbom-generator.md
AI_Projects/supply_chain/xbom_generator/: .dockerignore  Dockerfile  README.md  action.yml  deploy.sh
AI_Projects/supply_chain/xbom_generator/tests/: conftest.py  test_agent_manifest.py  test_assembler.py  test_classifier.py  test_cli.py  test_ecosystem_enricher.py  test_execution_graph.py  test_html_report.py  test_mcp_analyzer.py  test_risk_scorer.py  test_saasbom_analyzer.py  test_sbom_analyzer.py  test_scanner.py  test_secrets_analyzer.py  test_skillbom_analyzer.py  test_unpacker.py
AI_Projects/supply_chain/xbom_generator/xbom/: assembler.py  classifier.py  cli.py  scanner.py  unpacker.py
AI_Projects/supply_chain/xbom_generator/xbom/analyzers/: cbom.py  mcp.py  saasbom.py  sbom.py  skillbom.py
docs/superpowers/plans/: 2026-05-04-skillbom-analyzer.md
docs/superpowers/specs/: 2026-05-04-skillbom-analyzer-design.md
testcases/maishou/: SKILL.md
tests/: test_cbom_analyzer.py  test_mlbom_analyzer.py  test_netskope_enrichment.py  test_scanner.py  test_unpacker.py
xbom/: __init__.py  agent_manifest.py  assembler.py  classifier.py  cli.py  exceptions.py  scanner.py  unpacker.py
xbom/analyzers/: base.py  mlbom.py  sbom.py  secrets.py  skillbom.py
xbom/enrichment/: ecosystem_enricher.py  netskope_telemetry.py
xbom/models/: bom_types.py
xbom/report/: html_generator.py
xbom/scoring/: risk_scorer.py
(+3 files in other folders)
