[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbom"
version = "0.1.0"
description = "xBOM Generator - Extended Bill of Materials from binary analysis"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "click>=8.0",
    "python-magic>=0.4.27",
    "cyclonedx-python-lib>=7.0",
    "detect-secrets>=1.4",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.scripts]
xbom = "xbom.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=xbom --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
strict = true
python_version = "3.11"
